--- a/static/css/blogpost.css
+++ b/static/css/blogpost.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../images/bluebg.jpg");
+  background-image: url("../images/bluebg.jpg");
   background-size: cover;
 }
 
@@ -52,8 +52,8 @@ main {
   grid-area: main;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px; 
-  padding: 20px;
+  gap: 10px; 
+  padding: 10px;
 }
 
 p {
